--- a/package.json
+++ b/package.json
@@ -5,12 +5,23 @@
   "scripts": {
     "dev": "bun run --hot --inspect index.ts",
     "build": "bun build index.ts --outdir dist",
-    "preview": "bun run dist/index.ts"
+    "preview": "bun run dist/index.ts",
+    "lint": "eslint . --ext .ts --fix",
+    "format": "prettier --write .",
+    "prepare": "bun run .husky/install.mjs"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@eslint/js": "^9.13.0",
+    "@types/bun": "latest",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.6",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.11.0"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.6.3"
   }
 }
