--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "partyspark",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run --hot --inspect index.ts",
-    "build": "bun build index.ts --outdir dist",
+    "dev": "bun run --hot src/index.ts",
+    "build": "bun build src/index.ts --outdir dist",
     "preview": "bun run dist/index.ts",
-    "lint": "eslint . --ext .ts --fix",
+    "lint": "eslint ./src --fix",
     "format": "prettier --write .",
     "prepare": "bun run .husky/install.mjs"
   },
@@ -19,9 +19,15 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "prettier": "^3.3.3",
+    "prisma": "^5.21.1",
+    "reflect-metadata": "^0.2.2",
     "typescript-eslint": "^8.11.0"
   },
   "peerDependencies": {
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.21.1",
+    "inversify": "^6.0.3"
   }
 }
